--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <title>Проект "Личный кабинет учащегося Московского Политеха"</title>
 </head>
 <body>
@@ -48,6 +51,7 @@
             <p class="card-text">
               <b>Обязанности</b>
               <p>Разработка дизайна нового личного кабинета</p>
+              <p>Подготовка итоговой презентации проекта</p>
               <b>Используемые технологии</b>
               <ul>
                 <li>Adobe Photoshop</li>
@@ -64,6 +68,7 @@
             <p class="card-text">
               <b>Обязанности</b>
               <p>Верстка веб-страниц согласно новому дизайну</p>
+              <p>Написание итогового отчета о работе над проектом</p>
               <b>Используемые технологии</b>
               <ul>
                 <li>HTML5</li>
@@ -76,7 +81,7 @@
       <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Дмитрий Хван</h5>
+            <h5 class="card-title">Хван Дмитрий</h5>
             <p class="card-text">
               <b>Обязанности</b>
               <p>Реализация логики взаимодействия компонентов и сборка проекта</p>
@@ -96,28 +101,61 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
-        <h4>Примеры дизайна</h4>
+        <h4 class="text-center">Наш дизайн</h4>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <div class="thumbnail">
-          <a href="images/authorization.jpg">
-            <img src="images/authorization.jpg" alt="Авторизация" style="width:100%">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div id="demo" class="carousel slide" data-ride="carousel">
+          <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+            <li data-target="#demo" data-slide-to="3"></li>
+            <li data-target="#demo" data-slide-to="4"></li>
+            <li data-target="#demo" data-slide-to="5"></li>
+            <li data-target="#demo" data-slide-to="6"></li>
+            <li data-target="#demo" data-slide-to="7"></li>
+            <li data-target="#demo" data-slide-to="8"></li>
+            <li data-target="#demo" data-slide-to="9"></li>
+          </ul>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/authorization.jpg" alt="Авторизация" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/personal_page.jpg" alt="Личная страница" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/settings.jpg" alt="Настройки" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/grades.jpg" alt="Оценки" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/visited_PhEd.jpg" alt="Посещения физкультуры" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/additional_courses.jpg" alt="Дополнительное образование" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/career.jpg" alt="Карьера" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/international.jpg" alt="Международные стажировки" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/education_programs.jpg" alt="Факультеты" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/reference.jpg" alt="Справки" style="width:100%">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
           </a>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <div class="thumbnail">
-          <a href="images/visited_PhEd.jpg">
-            <img src="images/visited_PhEd.jpg" alt="Посещения физкультуры" style="width:100%">
-          </a>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <div class="thumbnail">
-          <a href="images/education_programs.jpg">
-            <img src="images/education_programs.jpg" alt="Образовательные программы" style="width:100%">
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
           </a>
         </div>
       </div>
@@ -126,8 +164,10 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
-        <h4>Ссылка на Git-репозиторий</h4>
-        <p><a href="https://github.com/dimalemur/PolyProfile">GitHub</a></p>
+        <h4>Ссылка на GitHub-репозиторий проекта</h4>
+        <p><a href="https://github.com/dimalemur/PolyProfile">GitHub Проект</a></p>
+        <h4>Ссылка на GitHub-репозиторий сайта-лендинга</h4>
+        <p><a href="https://github.com/amrchnk/RK">GitHub Сайт</a></p>
         <br />
       </div>
     </div>
