--- a/site/index.html
+++ b/site/index.html
@@ -41,6 +41,15 @@
 
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h4>Заказчик проекта</h4>
+        <p>Федеральное государственное бюджетное образовательное учреждение высшего образования
+«Московский политехнический университет»</p>
+        <p><a href="https://new.mospolytech.ru/">Официальный сайт</a></p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
         <h4>Команда проекта</h4>
       </div>
@@ -95,6 +104,19 @@
             </p>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <br />
+        <h4>Этапы работы над проектом</h4>
+        <ol>
+          <li>Разработка нового дизайна</li>
+          <li>Верстка страниц сайта</li>
+          <li>Разработка скриптов и сборка проекта</li>
+        </ol>
+        <br />
       </div>
     </div>
 
