--- a/site/index.html
+++ b/site/index.html
@@ -188,8 +188,8 @@
         <br />
         <h4>Ссылка на GitHub-репозиторий проекта</h4>
         <p><a href="https://github.com/dimalemur/PolyProfile">GitHub Проект</a></p>
-        <h4>Ссылка на GitHub-репозиторий сайта-лендинга</h4>
-        <p><a href="https://github.com/amrchnk/RK">GitHub Сайт</a></p>
+        <h4>Ссылка на GitHub-репозиторий с документацией по проекту</h4>
+        <p><a href="https://github.com/amrchnk/RK">GitHub Документация</a></p>
         <br />
       </div>
     </div>
