--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <title>Проект "Личный кабинет учащегося Московского Политеха"</title>
+  <title>Проект "Личный кабинет студента и преподавателя Московского Политеха"</title>
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
-        <h2>Проект "Личный кабинет учащегося Московского Политеха"</h2>
+        <h2>Проект "Личный кабинет студента и преподавателя Московского Политеха"</h2>
         <br />
       </div>
     </div>
@@ -59,7 +59,7 @@
             <h5 class="card-title">Мирченко Анна</h5>
             <p class="card-text">
               <b>Обязанности</b>
-              <p>Разработка дизайна нового личного кабинета</p>
+              <p>Разработка нового дизайна личного кабинета</p>
               <p>Подготовка итоговой презентации проекта</p>
               <b>Используемые технологии</b>
               <ul>
@@ -100,6 +100,7 @@
                 <li>Webpack</li>
                 <li>React</li>
                 <li>Redux/Flux</li>
+                <li>TypeScript</li>
               </ul>
             </p>
           </div>
@@ -111,9 +112,19 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
         <h4>Этапы работы над проектом</h4>
+        <h5>Весенний семестр 2019-2020</h5>
         <ol>
-          <li>Разработка нового дизайна</li>
-          <li>Верстка страниц сайта</li>
+          <li>Разработка нового дизайна для десктопной версии сайта для преподавательской и студенческой частей</li>
+          <li>Верстка страниц для десктопной версии сайта для преподавательской и студенческой частей</li>
+          <li>Разработка скриптов и сборка проекта</li>
+        </ol>
+        <h5>Осенний семестр 2020-2021</h5>
+        <ol>
+          <li>Внесение изменений в дизайн для десктопной версии сайта</li>
+          <li>Верстка страниц для десктопной версии сайта согласно внесенным изменениям</li>
+          <li>Адаптация нового дизайна для мобильной версии сайта</li>
+          <li>Верстка страниц для мобильной версии сайта</li>
+          <li>Перенос проекта на TypeScript</li>
           <li>Разработка скриптов и сборка проекта</li>
         </ol>
         <br />
@@ -124,6 +135,8 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
         <h4 class="text-center">Наш дизайн</h4>
+        <br />
+        <h4 class="text-center">Десктопная версия</h4>
       </div>
     </div>
     <div class="row">
@@ -158,13 +171,13 @@
               <img src="images/visited_PhEd.jpg" alt="Посещения физкультуры" style="width:100%">
             </div>
             <div class="carousel-item">
-              <img src="images/additional_courses.jpg" alt="Дополнительное образование" style="width:100%">
+              <img src="images/schedule.jpg" alt="Расписание" style="width:100%">
             </div>
             <div class="carousel-item">
               <img src="images/career.jpg" alt="Карьера" style="width:100%">
             </div>
             <div class="carousel-item">
-              <img src="images/international.jpg" alt="Международные стажировки" style="width:100%">
+              <img src="images/messages.jpg" alt="Сообщения" style="width:100%">
             </div>
             <div class="carousel-item">
               <img src="images/education_programs.jpg" alt="Факультеты" style="width:100%">
@@ -186,8 +199,73 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
-        <h4>Ссылка на GitHub-репозиторий проекта</h4>
-        <p><a href="https://github.com/dimalemur/PolyProfile">GitHub Проект</a></p>
+        <h4 class="text-center">Мобильная версия</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-4 offset-md-4 col-lg-4 offset-lg-4">
+        <div id="mob" class="carousel slide" data-ride="carousel">
+          <ul class="carousel-indicators">
+            <li data-target="#mob" data-slide-to="0" class="active"></li>
+            <li data-target="#mob" data-slide-to="1"></li>
+            <li data-target="#mob" data-slide-to="2"></li>
+            <li data-target="#mob" data-slide-to="3"></li>
+            <li data-target="#mob" data-slide-to="4"></li>
+            <li data-target="#mob" data-slide-to="5"></li>
+            <li data-target="#mob" data-slide-to="6"></li>
+            <li data-target="#mob" data-slide-to="7"></li>
+            <li data-target="#mob" data-slide-to="8"></li>
+            <li data-target="#mob" data-slide-to="9"></li>
+          </ul>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/mob_authorization.jpg" alt="Авторизация" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_personal_page.jpg" alt="Личная страница" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_settings.jpg" alt="Настройки" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_grades.jpg" alt="Оценки" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_visited_PhEd.jpg" alt="Посещения физкультуры" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_schedule.jpg" alt="Расписание" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_career.jpg" alt="Карьера" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_messages.jpg" alt="Сообщения" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_education_programs.jpg" alt="Факультеты" style="width:100%">
+            </div>
+            <div class="carousel-item">
+              <img src="images/mob_reference.jpg" alt="Справки" style="width:100%">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#mob" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#mob" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <br />
+        <h4>Ссылка на GitHub-репозиторий проекта (ReactJS, текущий для верстки)</h4>
+        <p><a href="https://github.com/dimalemur/PolyprofilePractic">GitHub Проект (ReactJS)</a></p>
+        <h4>Ссылка на GitHub-репозиторий проекта (TypeScript)</h4>
+        <p><a href="https://github.com/dimalemur/polyteacher">GitHub Проект (TypeScript)</a></p>
         <h4>Ссылка на GitHub-репозиторий с документацией по проекту</h4>
         <p><a href="https://github.com/amrchnk/RK">GitHub Документация</a></p>
         <br />
