--- a/site/index.html
+++ b/site/index.html
@@ -127,6 +127,15 @@
           <li>Перенос проекта на TypeScript</li>
           <li>Разработка скриптов и сборка проекта</li>
         </ol>
+        <h5>Весенний семестр 2020-2021</h5>
+        <ol>
+          <li>Тестирование прототипа сайта, выявление ошибок</li>
+          <li>Отладка front-end'a сайта</li>
+          <li>Отладка back-end'a сайта</li>
+          <li>Выход проекта на голосование вместе с другими прототипами ЛК на официальной странице Московского Политеха в ВК и Телеграме</li>
+          <li>Тестирование прототипа будущими пользователями, получение отзывов</li>
+          <li>Кооперация с другими командами, анализ отзывов, определение нового вектора развития проекта</li>
+        </ol>
         <br />
       </div>
     </div>
@@ -268,6 +277,8 @@
         <p><a href="https://github.com/dimalemur/polyteacher">GitHub Проект (TypeScript)</a></p>
         <h4>Ссылка на GitHub-репозиторий с документацией по проекту</h4>
         <p><a href="https://github.com/amrchnk/RK">GitHub Документация</a></p>
+        <h4>Ссылка на голосование за лучший прототип нового ЛК в Telegram</h4>
+        <p><a href="https://t.me/mospolytech/677">Голосование в Telegram</a></p>
         <br />
       </div>
     </div>
