--- a/site/index.html
+++ b/site/index.html
@@ -60,6 +60,7 @@
             <p class="card-text">
               <b>Обязанности</b>
               <p>Разработка нового дизайна личного кабинета</p>
+              <p>Сбор и анализ отзывов пользователей</p>
               <p>Подготовка итоговой презентации проекта</p>
               <b>Используемые технологии</b>
               <ul>
@@ -77,6 +78,7 @@
             <p class="card-text">
               <b>Обязанности</b>
               <p>Верстка веб-страниц согласно новому дизайну</p>
+              <p>Тестирование и отладка front-end’а</p>
               <p>Написание итогового отчета о работе над проектом</p>
               <b>Используемые технологии</b>
               <ul>
@@ -94,13 +96,15 @@
             <p class="card-text">
               <b>Обязанности</b>
               <p>Реализация логики взаимодействия компонентов и сборка проекта</p>
+              <p>Тестирование и отладка back-end’а</p>
+              <p>Разворачивание проекта на сервере</p>
               <b>Используемые технологии</b>
               <ul>
                 <li>JS</li>
                 <li>Webpack</li>
                 <li>React</li>
                 <li>Redux/Flux</li>
-                <li>TypeScript</li>
+                <li>Postman</li>
               </ul>
             </p>
           </div>
@@ -136,6 +140,7 @@
           <li>Тестирование прототипа будущими пользователями, получение отзывов</li>
           <li>Кооперация с другими командами, анализ отзывов, определение нового вектора развития проекта</li>
         </ol>
+        <h5>По итогам голосования наш проект набрал 17% голосов и занял 2 место.</h5>
         <br />
       </div>
     </div>
@@ -271,10 +276,8 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <br />
-        <h4>Ссылка на GitHub-репозиторий проекта (ReactJS, текущий для верстки)</h4>
-        <p><a href="https://github.com/dimalemur/PolyprofilePractic">GitHub Проект (ReactJS)</a></p>
-        <h4>Ссылка на GitHub-репозиторий проекта (TypeScript)</h4>
-        <p><a href="https://github.com/dimalemur/polyteacher">GitHub Проект (TypeScript)</a></p>
+        <h4>Ссылка на GitHub-репозиторий проекта</h4>
+        <p><a href="https://github.com/dimalemur/PolyprofilePractic">GitHub Проект</a></p>
         <h4>Ссылка на GitHub-репозиторий с документацией по проекту</h4>
         <p><a href="https://github.com/amrchnk/RK">GitHub Документация</a></p>
         <h4>Ссылка на голосование за лучший прототип нового ЛК в Telegram</h4>
@@ -288,7 +291,7 @@
   <footer class="footer navbar-default">
     <div class="container-fluid">
       <div class="navbar-text">
-        <span>2020</span>
+        <span>2020-2021</span>
       </div>
     </div>
   </footer>
