--- a/site/index.html
+++ b/site/index.html
@@ -78,12 +78,13 @@
             <p class="card-text">
               <b>Обязанности</b>
               <p>Верстка веб-страниц согласно новому дизайну</p>
-              <p>Тестирование и отладка front-end’а</p>
+              <p>Тестирование и отладка верстки</p>
               <p>Написание итогового отчета о работе над проектом</p>
               <b>Используемые технологии</b>
               <ul>
                 <li>HTML5</li>
                 <li>CSS3</li>
+                <li>Bootstrap 4</li>
               </ul>
             </p>
           </div>
@@ -96,7 +97,7 @@
             <p class="card-text">
               <b>Обязанности</b>
               <p>Реализация логики взаимодействия компонентов и сборка проекта</p>
-              <p>Тестирование и отладка back-end’а</p>
+              <p>Тестирование и отладка скриптов</p>
               <p>Разворачивание проекта на сервере</p>
               <b>Используемые технологии</b>
               <ul>
@@ -134,8 +135,8 @@
         <h5>Весенний семестр 2020-2021</h5>
         <ol>
           <li>Тестирование прототипа сайта, выявление ошибок</li>
-          <li>Отладка front-end'a сайта</li>
-          <li>Отладка back-end'a сайта</li>
+          <li>Отладка верстки сайта</li>
+          <li>Отладка скриптов сайта</li>
           <li>Выход проекта на голосование вместе с другими прототипами ЛК на официальной странице Московского Политеха в ВК и Телеграме</li>
           <li>Тестирование прототипа будущими пользователями, получение отзывов</li>
           <li>Кооперация с другими командами, анализ отзывов, определение нового вектора развития проекта</li>
